Finishing up the role collection and ready for testing
